--- a/src/components/Tags.astro
+++ b/src/components/Tags.astro
@@ -25,6 +25,7 @@ const { tags } = Astro.props;
 		padding: 0.25rem 0.75rem;
 		border-radius: var(--radius-md);
 		font-size: 0.85rem;
+		font-weight: bold;
 	}
 
 	@media (prefers-color-scheme: dark) {
