--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,12 +12,7 @@ import Layout from '../layouts/Layout.astro';
 		</div>
 
 		<div class="content">
-			<p>
-				Hi, I'm Dejan Vasic, currently at Staff Software Engineer at
-				<a href="https://www.open.edu.au/" target="_blank" rel="noopener noreferrer"
-					>Open Universities Australia</a
-				> with a passion for building robust and scalable web applications.
-			</p>
+			<p>Hi, I'm Dejan Vasic. and I love building stuff for the web.</p>
 
 			<p>My expertise includes (but not limited to):</p>
 			<ul>
