--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -169,13 +169,7 @@ const {
 	}
 
 	.mobile-screenshot {
-		position: relative;
-		top: 0;
-		right: 0;
-		width: 150px;
-		margin: 1rem auto 0;
-		display: block;
-		z-index: 2;
+		display: none;
 	}
 
 	.screenshots-container {
@@ -304,7 +298,10 @@ const {
 			top: 30px;
 			right: -20px;
 			width: 190px;
+			margin: 1rem auto 0;
+			display: block;
 			margin: 0;
+			z-index: 2;
 		}
 
 		.screenshots-container {
