--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,10 @@ import Layout from '../layouts/Layout.astro';
 		</div>
 
 		<div class="content">
-			<p>Hi, I'm Dejan Vasic. and I love building stuff for the web.</p>
+			<p>
+				Hi, I'm Dejan Vasic. and I love building stuff for the web with a focus on quality, security
+				and performance.
+			</p>
 
 			<p>My expertise includes (but not limited to):</p>
 			<ul>
