--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -21,7 +21,7 @@ const sortedPosts = allPosts.sort((a, b) => {
 <Layout title="Blog - Dejan Vasic">
 	<main class="container">
 		<div class="blog-header">
-			<h1>Blog</h1>
+			<h1>Dejan Vasic blog</h1>
 			<a href="/rss.xml" class="rss-link" title="Subscribe to RSS feed">
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
