--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -6,7 +6,7 @@ import { projects } from '../content/projects';
 
 <Layout title="Projects - Dejan Vasic">
 	<main class="container">
-		<h1>Projects</h1>
+		<h1>Dejan Vasic's projects</h1>
 		<div class="projects-list">
 			{
 				projects.map((project) => (
